# sui-token-transfer-tracker

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  REQUIREMENTS.md  TECHNICAL_REQUIREMENTS.md  build.rs  项目文件结构.md
.claude/: settings.local.json
config/: demo.toml  example.toml  testnet.toml
examples/: demo.rs  query_address_rpc.rs  simple_sui_test.rs  test_formatter.rs  test_graphql_client.rs
src/: alert_system.rs  config.rs  error.rs  event_monitor.rs  lib.rs  main.rs  output_formatter.rs  sui_client.rs  transaction_processor.rs
tests/: integration_tests.rs  unit_tests.rs
